WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210985
iPad: "Pocket City" interaction does not work with trackpad
https://bugs.webkit.org/show_bug.cgi?id=210985
Summary
iPad: "Pocket City" interaction does not work with trackpad
Tim Horton
Reported
2020-04-24 12:31:57 PDT
iPad: "Pocket City" interaction does not work with trackpad
Attachments
Patch
(3.47 KB, patch)
2020-04-24 12:32 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-04-24 12:32:20 PDT
Created
attachment 397485
[details]
Patch
Tim Horton
Comment 2
2020-04-24 12:32:23 PDT
<
rdar://problem/62273077
>
EWS
Comment 3
2020-04-24 13:06:02 PDT
Committed
r260663
: <
https://trac.webkit.org/changeset/260663
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397485
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug