iPad: "Pocket City" interaction does not work with trackpad https://bugs.webkit.org/show_bug.cgi?id=210985 <rdar://problem/62273077>

Reviewed by Wenson Hsieh.

Source/WebCore:

* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isPocketCity):

Source/WebKit:

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView shouldUseMouseGestureRecognizer]):
Add another app to the list who fall back to touch event synthesis until rebuilt.


Canonical link: https://commits.webkit.org/223872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260663 268f45cc-cd09-0410-ab3c-d52691b4dbfc